@@ -1,5 +1,11 @@
 2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* operation/snmpconsole/snmp_view.php: added the show more data when click
+	in the icon eye.
+	Pending task: #3021813
+
+2010-07-21  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* operation/agentes/estado_ultimopaquete.php: added code for sort by
 	data.
 	
